# svgtypes

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/: copyright.sh
.github/workflows/: ci.yml
benches/: benchmark.rs
codegen/: Cargo.toml  main.rs
fuzz/fuzz_targets/: fuzz_color.rs  fuzz_length.rs  fuzz_path.rs  fuzz_transform.rs
src/: angle.rs  aspect_ratio.rs  color.rs  colors.rs  directional_position.rs  enable_background.rs  error.rs  filter_functions.rs  font.rs  length.rs  lib.rs  number.rs  paint.rs  paint_order.rs  path.rs  points.rs  stream.rs  transform.rs  transform_origin.rs  viewbox.rs
