[package]
name = "svgtypes"
version = "0.15.2"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
categories = ["parser-implementations"]
description = "SVG types parser."
documentation = "https://docs.rs/svgtypes/"
keywords = ["svg", "parser", "tokenizer"]
license = "Apache-2.0 OR MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/RazrFalcon/svgtypes"
exclude = ["benches/", "codegen/", "fuzz/"]

[workspace]
members = ["benches"]

[dependencies]
siphasher = "1.0" # perfect hash implementation for color names
kurbo = "0.11" # ArcTo to CurveTo(s)
